[project]
name = "[insert project name]"
version = "[insert project version]"
description = "[insert project description]"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "llmcompare",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "mypy",
]

[tool.uv]
default-groups = "all"

[tool.uv.sources]
llmcompare = { git = "https://github.com/johny-b/llmcompare.git", rev = "main" }
